make the tool run both on Windows and Unix-like OS